<LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.example.viper2.blog_config.BthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="View Setting"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:id="@+id/btnOptionfr"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Value Setup"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:id="@+id/btnConfigfr"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/OptionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:rowCount="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:layout_margin="2dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:id="@+id/txt0"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center">
                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alignmentMode="alignMargins"
                    android:layout_gravity="center"
                    android:columnCount="1"
                    android:rowCount="4">
                    <!--
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:text="********"
                        android:layout_margin="2dp"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:id="@+id/btn1"/>
                    !-->
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:text="Current Setting"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:id="@+id/btn2"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:text="Check Sensor Status"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:id="@+id/btn3"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:text="Disconnect"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:id="@+id/btn4"/>

                </GridLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Con"
                android:layout_margin="1dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:id="@+id/txt1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:id="@+id/txt2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:id="@+id/txt3"/>
        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ConfigLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:rowCount="5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:layout_margin="2dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:id="@+id/txt4"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center">
                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alignmentMode="alignMargins"
                    android:layout_gravity="center"
                    android:columnCount="2"
                    android:rowCount="5">
                    <!--aqui mode-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Confg0"
                        android:layout_margin="2dp"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:id="@+id/txt9"/>
                    <Spinner
                        android:id="@+id/sMode"
                        style="@style/mySpinnerItemStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        />
                    <!--aqui mode-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Confg1"
                        android:layout_margin="2dp"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:id="@+id/txt5"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:text="Init Hour"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:id="@+id/btnChangeTime"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Confg2"
                        android:layout_margin="2dp"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:id="@+id/txt6"/>
                    <Spinner
                        android:id="@+id/sSpeed"
                        style="@style/mySpinnerItemStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/Confg3"
                        android:layout_margin="2dp"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:id="@+id/txt7"/>
                    <Spinner
                        android:id="@+id/sPack"
                        style="@style/mySpinnerItemStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Confg4"
                        android:layout_margin="2dp"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:id="@+id/txt8"/>
                    <Spinner
                        android:id="@+id/sBtime"
                        style="@style/mySpinnerItemStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        />
                </GridLayout>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:text="Update Logger"
                android:layout_margin="2dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:id="@+id/btnSend"/>
        </GridLayout>
    </LinearLayout>

</LinearLayout>
